--- a/stylesheet.css
+++ b/stylesheet.css
@@ -157,3 +157,29 @@ main{
     }
     
 }
+@media only screen and (max-width:393px){
+    .company-logo img{
+        width: 100px;
+        height: 50px;
+        background-color: #fff;
+        border-radius: 40%;
+    }
+    .nav-links ul{
+        display: none;
+    }
+    .container{
+        max-width: 767px;
+        margin-inline: auto;
+        justify-content: center;
+        overflow: hidden;
+    }
+    .news-input{
+        width: 100px;
+        height: 100%;
+        padding-inline:12px;
+        border-radius: 4px;
+        border: 2px solid #bbd0e2;
+        font-family: "Roboto",sans-serif;
+    
+    }
+}
