--- a/stylesheet.css
+++ b/stylesheet.css
@@ -143,7 +143,7 @@ main{
     .company-logo img{
         width: 100px;
         height: 50px;
-        background-color: #fff;
+       background-color: #f3faff;
         border-radius: 40%;
     }
     .nav-links ul{
@@ -161,7 +161,7 @@ main{
     .company-logo img{
         width: 100px;
         height: 50px;
-        background-color: #fff;
+        background-color: #f3faff;
         border-radius: 40%;
     }
     .nav-links ul{
